# honey-drop-api

./: .gitignore  README.md  customers.xlsx  deploy.CMD  leads.xlsx
app/: Dockerfile  compose.yml  db.sqlite3  manage.py  nginx.conf  pyproject.toml  requirements.txt
app/api/: models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
app/api/migrations/: 0001_initial.py  0002_alter_lead_address.py
app/aquaflow/: asgi.py  settings.py  urls.py  wsgi.py
app/honeydrop/: asgi.py  dev_settings.py  settings.py  wsgi.py
